--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,6 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
-      - name: List Files
-        run: ls -R
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -43,7 +41,24 @@ jobs:
       - name: Get Template
         run: |
           cd dist
-          git clone https://github.com/Thre4dripper/NodeTs-Express-Service-Based-Template.git template
+          git clone https://github.com/Thre4dripper/NodeTs-Express-Service-Based-Template.git template-typescript
           cd ..
+      - name: Make changes in tsconfig.json file
+        run: |
+          cd dist/template-typescript
+          sed -i 's/"target": "ES6"/"target": "ESNext"/g' tsconfig.json
+          sed -i 's/"module": "CommonJS"/"module": "ESNext"/g' tsconfig.json
+          sed -i 's/"sourceMap": true/"sourceMap": false/g' tsconfig.json
+      - name: Build template
+        run: |
+          cd dist/template-typescript
+          yarn install --frozen-lockfile
+          yarn build
+      - name: Copy generated files to make JavaScript template
+        run: |
+          cd dist/template-typescript
+          cp -r dist ../template-javascript
       - name: List files
         run: ls -R
+      - name: Cat in server.js
+        run: cat dist/template-javascript/server.js
