--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,9 +46,13 @@ jobs:
       - name: Make changes in tsconfig.json file
         run: |
           cd dist/template-typescript
+          echo "Changing target from ES6 to ESNext in tsconfig.json"
           sed -i 's/"target": "ES6"/"target": "ESNext"/g' tsconfig.json
+          echo "Changing module from CommonJS to ESNext in tsconfig.json"
           sed -i 's/"module": "CommonJS"/"module": "ESNext"/g' tsconfig.json
+          echo "Changing sourceMap from true to false in tsconfig.json"
           sed -i 's/"sourceMap": true/"sourceMap": false/g' tsconfig.json
+          cat tsconfig.json
       - name: Build template
         run: |
           cd dist/template-typescript
@@ -61,4 +65,4 @@ jobs:
       - name: List files
         run: ls -R
       - name: Cat in server.js
-        run: cat dist/template-javascript/server.js
+        run: cat dist/template-javascript/src/server.js
