--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,11 +46,6 @@ jobs:
           rm -rf .git
           rm -rf .github
           cd ../..
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: dist
   publish:
     needs: prepare-template
     runs-on: ubuntu-latest
@@ -64,3 +59,5 @@ jobs:
           path: dist
       - name: Publish package on NPM
         run: echo "publishing package on NPM"
+      - name: List files
+        run: ls -la
