--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,5 +59,5 @@ jobs:
           path: dist
       - name: Publish package on NPM
         run: echo "publishing package on NPM"
-      - name: List files
-        run: ls -la
+      - name: List files and folders
+        run: ls -R
