--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,12 @@
 name: Build
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -22,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build1
-          path: build1
+          path: dist
           retention-days: 1
 
   prepare-template:
@@ -35,10 +39,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build1
-          path: build1
+          path: dist
       - name: Get Template
         run: |
-          cd build1
+          cd dist
           git clone https://github.com/Thre4dripper/NodeTs-Express-Service-Based-Template.git template
           cd template
           rm -rf .git && rm -rf .github
@@ -53,7 +57,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build2
-          path: dist2
+          path: dist
           retention-days: 1
   publish:
     needs: prepare-template
@@ -65,14 +69,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build2
-          path: dist2
-      - name: Get Release Version
-        id: get_release_version
-        run: echo ::set-output name=release_version::${GITHUB_REF#refs/tags/}
-      - name: Update Package Version
-        run: |
-          cd dist2
-          sed -i "s/\"version\": \"0.0.0\"/\"version\": \"${{ steps.get_release_version.outputs.release_version }}\"/" package.json
+          path: dist
       - name: Publish package on NPM
         run: echo "publishing package on NPM"
       - name: List files and folders
