defined repo env variable for repo name specific steps

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  REPO_NAME: ${GITHUB_REPOSITORY#*/}
+
 jobs:
   check-version:
     name: Check version
@@ -25,9 +28,8 @@ jobs:
       - name: Compare versions and set output
         id: compare_versions
         run: |
-          REPO=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)
           CURRENT_VERSION=$(node -p "require('./package.json').version")
-          NPM_VERSION=$(npm view $REPO version)
+          NPM_VERSION=$(npm view ${{ env.REPO_NAME }} version)
           
           HIGHEST_VERSION=$(echo -e "$CURRENT_VERSION\n$NPM_VERSION" | sort -V | tail -n 1)
           
@@ -164,7 +166,7 @@ jobs:
 
       - name: Create Release Asset
         run: |
-          tar -czf express-master-controller-v${{ steps.get_version.outputs.VERSION }}.tgz dist
+          tar -czf $REPO_NAME-v${{ steps.get_version.outputs.VERSION }}.tgz dist
         shell: bash
 
       - name: Upload Release Asset
@@ -174,8 +176,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./express-master-controller-v${{ steps.get_version.outputs.VERSION }}.tgz
-          asset_name: express-master-controller-v${{ steps.get_version.outputs.VERSION }}.tgz
+          asset_path: ./${{ env.REPO_NAME }}-v${{ steps.get_version.outputs.VERSION }}.tgz
+          asset_name: ${{ env.REPO_NAME }}-v${{ steps.get_version.outputs.VERSION }}.tgz
           asset_content_type: application/gzip
 
   update-version:
