--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -166,7 +166,7 @@ jobs:
 
       - name: Create Release Asset
         run: |
-          tar -czf $REPO_NAME-v${{ steps.get_version.outputs.VERSION }}.tgz dist
+          tar -czf ${{ env.REPO_NAME }}-v${{ steps.get_version.outputs.VERSION }}.tgz dist
         shell: bash
 
       - name: Upload Release Asset
