fixed publishing job

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,7 +91,7 @@ jobs:
               run: yarn install --frozen-lockfile
 
             - name: Build
-              run: rm -rf dist && yarn build
+              run: yarn build
 
             - name: Prepare Template
               run: |
@@ -113,9 +113,12 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: build
+                  include-hidden-files: true
                   path: |
-                      ./**
-                      !node_modules/**
+                      ./dist
+                      ./package.json
+                      ./README.md
+                      ./LICENSE
 
     publish:
         name: Publish to NPM
