--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -139,12 +139,19 @@ jobs:
                   registry-url: 'https://registry.npmjs.org'
 
             - name: Publish package on NPM
-              run: npm publish
+              run: |
+                  echo "Publishing to NPM"
+                  npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+                  npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-            - name: Publish package on GitHub
-              run: npm publish --registry=https://npm.pkg.github.com
+            - name: Publish to Github Packages
+              run: |
+                  echo "Configuring for Github Packages"
+                  jq '.name = "@thre4dripper/'${{ env.REPO_NAME }}'" package.json > package.json.tmp && mv package.json.tmp package.json
+                  npm config set //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
+                  npm publish --registry=https://npm.pkg.github.com --access=public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
